changed the margin for the image of motorchi and fixed the alignment

--- a/css/portfoilo.css
+++ b/css/portfoilo.css
@@ -751,9 +751,9 @@ float: left;
 	width: 300px;
 }
 .compress img{
-	width: 50%;
+	width: 80%;
 	height: auto;
-	margin: 10px;
+	 margin: 10%;
 }
 
 #video-background {
